<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_login_icon"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/login_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="64dp"
                app:roundAsCircle="true"
                app:failureImage="@drawable/bg_login_avatar"
                app:failureImageScaleType="centerCrop"
                app:placeholderImage="@drawable/bg_login_avatar"
                app:placeholderImageScaleType="centerCrop"
                android:src="@drawable/bg_login_avatar"/>
            <ImageView
                android:id="@+id/iv_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/bg_login_welcome"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_login_input"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp">

                <EditText
                    android:id="@+id/account_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/activity_login_account"
                    android:inputType="phone|number"
                    android:maxLength="11"
                    android:textColor="@color/white"
                    android:textColorHint="#57607E"
                    android:layout_marginLeft="24dp"
                    android:layout_weight="1"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="16sp"/>
                <LinearLayout
                    android:id="@+id/ll_clear"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:visibility="gone">
                    <ImageView
                        android:id="@+id/iv_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_login_clear"
                        android:layout_marginRight="20dp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="28.8dp"
                android:background="@drawable/bg_login_input"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp">


                <EditText
                    android:id="@+id/account_password"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/activity_login_password"
                    android:inputType="numberPassword"
                    android:digits="@string/digits_password"
                    android:textColor="@color/white"
                    android:textColorHint="#57607E"
                    android:textSize="16sp"
                    android:maxLength="16"
                    android:layout_marginLeft="24dp"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:id="@+id/ll_eye"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/iv_eye"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/bg_closed_eye"
                        android:layout_marginRight="20dp"/>
                </LinearLayout>


            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp">
                <TextView
                    android:id="@+id/remeber_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="记住密码"
                    android:drawableLeft="@drawable/bg_remeber_pas_select"
                    android:textColor="@color/white"
                    android:drawablePadding="8dp"
                    android:textSize="13sp"/>
                <TextView
                    android:id="@+id/tv_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="忘记密码"
                    android:textColor="@color/white"
                    android:textSize="13sp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <Button
                    android:id="@+id/next"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/btn_confirm"
                    android:gravity="center"
                    android:text="@string/LoginBtn"
                    android:textColor="#ffffffff"
                    android:textSize="16sp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    />
                <RelativeLayout
                    android:id="@+id/rl_rule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/next"
                    >
                    <TextView
                        android:id="@+id/tv_rule"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="点击登录表示同意"
                        android:textColor="#ffc4c4c4"
                        android:textSize="12sp"
                        />
                    <TextView
                        android:id="@+id/user_rule"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="《用户协议》"
                        android:layout_toRightOf="@+id/tv_rule"
                        android:textColor="#ff38a1ff"
                        android:textSize="12sp"
                        />

                </RelativeLayout>



            </RelativeLayout>
            <TextView
                android:id="@+id/test_mode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="体验模式"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:gravity="bottom"
                android:layout_marginBottom="40dp"/>

        </LinearLayout>
    </LinearLayout>

</layout>